--- a/app/views/datatools/datatool_irr_plan_res.html
+++ b/app/views/datatools/datatool_irr_plan_res.html
@@ -431,44 +431,44 @@
                                 <tr class="tr-sub">
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">15.00%</i></span>
+                                        <span class="number-format">15.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">8.00%</i></span>
+                                        <span class="number-format">8.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">5.00%</i></span>
+                                        <span class="number-format">5.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
 
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                 </tr>
                                 <tr class="tr-sub tr-split-bottom tr-note">
@@ -568,44 +568,44 @@
                                 <tr class="tr-sub">
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">15.00%</i></span>
+                                        <span class="number-format">15.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">8.00%</i></span>
+                                        <span class="number-format">8.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">5.00%</i></span>
+                                        <span class="number-format">5.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
 
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">3.00%</i></span>
+                                        <span class="number-format">3.00<i class="unit-addon">%</i></span>
                                     </div></td>
                                 </tr>
                                 <tr class="tr-sub">
@@ -767,44 +767,44 @@
                                 <tr class="tr-sub">
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="5">
-                                        <span class="number-format"><i class="unit-addon">5%</i></span>
+                                        <span class="number-format">5<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
 
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="5">
-                                        <span class="number-format"><i class="unit-addon">5%</i></span>
+                                        <span class="number-format">5<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="5">
-                                        <span class="number-format"><i class="unit-addon">5%</i></span>
+                                        <span class="number-format">5<i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input">
                                         <input type="text" placeholder="/" data-date="" value="">
-                                        <span class="number-format"><i class="unit-addon">0%</i></span>
+                                        <span class="number-format">0<i class="unit-addon">%</i></span>
                                     </div></td>
 
                                 </tr>
