--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -15,7 +15,7 @@
             <div class="col-xs-3 amp-date-wrapper">
                 <label>开业时间</label>
                 <div class="amp-date-picker pull-left" data-date="" data-date-format="yyyy-mm-dd" >
-                    <input class="" size="16" type="text" placeholder="2015-10" disabled>
+                    <input class="" size="16" type="text" placeholder="2016-10" disabled>
                 </div>
             </div>
         </div>
@@ -82,10 +82,11 @@
                             <td rowspan="4"><span>地段条件</span></td>
                             <td><span>区域属性</span></td>
                             <td>
-                                <div class="td-input-wrapper">
-                                    <input type="text" value="8%"  data-date="" placeholder=""/>
-                                    <span class="number-format"></span>
+                                <div class="td-input-wrapper num-input" >
+                                    <input type="text" placeholder="/" value="8">
+                                    <span class="number-format">8<i class="unit-addon">%</i></span>
                                 </div>
+
                             </td>
                         </tr>
                         <tr>
@@ -255,9 +256,9 @@
                                 <tbody>
                                 <tr>                                  
                                     <td>
-                                        <div class="td-input-wrapper text-input">
-                                            <input type="text" value="7"  data-date="" placeholder=""/>
-                                            <!--<span class="number-format"></span>-->
+                                        <div class="td-input-wrapper num-input" >
+                                            <input type="text" placeholder="/" value="7">
+                                            <span class="number-format">7</span>
                                         </div>
                                     </td>
                                     <td>
@@ -1091,9 +1092,9 @@
                 <tr>
                     <th style="width:120px;">首年租金折扣</th>
                     <td class="required">
-                        <div class="td-input-wrapper text-input">
-                        <input type="text" value="100%"  data-date="" placeholder=""/>
-                          <!--<span class="number-format"></span>-->
+                        <div class="td-input-wrapper num-input" >
+                            <input type="text" placeholder="/" value="8">
+                            <span class="number-format">8<i class="unit-addon">%</i></span>
                         </div>
                     </td>
                 </tr>
@@ -1141,9 +1142,9 @@
                                 <tbody>
                                 <tr>
                                     <td>
-                                        <div class="td-input-wrapper text-input">
-                                            <input type="text" value="4.80%"  data-date="" placeholder=""/>
-                                            <!--<span class="number-format"></span>-->
+                                        <div class="td-input-wrapper num-input" >
+                                            <input type="text" placeholder="/" value="2">
+                                            <span class="number-format">2<i class="unit-addon">%</i></span>
                                         </div>
                                     </td>
                                     <td>
@@ -1286,9 +1287,9 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="td-input-wrapper text-input">
-                                            <input type="text" value="2"  data-date="" placeholder=""/>
-                                            <!--<span class="number-format"></span>-->
+                                        <div class="td-input-wrapper num-input" >
+                                            <input type="text" placeholder="/" value="2">
+                                            <span class="number-format">2</span>
                                         </div>
                                     </td>
                                     <td>
@@ -1480,9 +1481,9 @@
         </div>
     </div>
 </div><!-- contentpanel -->
-<script src="../static/js/views/datatools/rpg_set.js"></script>
+<!--<script src="../static/js/views/datatools/rpg_set.js"></script>
 <script>
     jQuery(document).ready(function(){
         swiper_table.init();
     });
-</script>
+</script>-->
