rent set update

--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -26,7 +26,7 @@
             <h3 class="col-xs-3">参考租金计算</h3>
             <span class="col-xs-8 pull-right amp-block-title-notify">注：参考租金为参考项目MALL 1F 主通道两侧面积100-150平米左右服装零售店铺的租金</span>
         </div>
-        <div class="amp-table-wrapper-swiper" id="rpg-set-table-wrapper">
+        <div class="amp-table-wrapper-swiper" id="rpg-set-table-wrapper" style="height:698px;">
             <div class="ys-table-fixed-top" style="padding-left:302px;">
                 <div class="ys-table-static ys-table-static-left" style="width:302px;">
                     <table class="table table-bordered amp-table table-hover table-header-fixed" style="width:100%;">
