--- a/app/views/datatools/datatool_rent_package_result.html
+++ b/app/views/datatools/datatool_rent_package_result.html
@@ -11,7 +11,7 @@
         <div class="amp-block-title">
             <h3 class="col-xs-3">租金包预览</h3>
         </div>
-            <div class="amp-table-wrapper-swiper" id="rpg-result-table-wrapper">
+            <div class="amp-table-wrapper-swiper" id="rpg-result-table-wrapper" style="height:470px;">
                 <div class="ys-table-fixed-top" style="padding-left:100px;">
                     <div class="ys-table-static ys-table-static-left" style="width:100px;">
                         <table class="table  amp-table table-hover table-header-fixed" style="width:100%;">
